- The `ClosedAdd, ClosedMul, etc.` traits no longer require `AddAssign, MulAssign`. Instead they are required for new
  traits named `ClosedAddAssign, ClosedMulAssign, etc.`
- The `ComplexField` and `SimdComplexField` (and, by extension, `RealField` and `SimdRealField`) traits now depend on the
  `SupersetOf<f32>` trait in addition to `SupersetOf<f64>`.

## Release v0.8.1 (04 Apr. 2023)
- Add implementation of `rkyv` serialization/deserialization to the `Wide*` wrapper types.

## Release v0.8.0 (14 Jan. 2023)
- When `rkyv` support is enabled, the archived version of `AutoSimd` and `AutoBoolSimd` are themselves. The
 `ArchivedAutoSimd` and `ArchivedAutoBoolSimd` types are no longer generated.

## Release v0.7.3 (30 Oct. 2022)
- Cuda: implement DeviceCopy for AutoSimd
- Implement `Distribution` (for random number generation) for SIMD types.

## Release v0.7.2 (30 July 2022)
- Add the optional types `WideF64x4` and `WideBoolF64x4` for 4-lanes SIMD 64-bits float operations based on
  the `wide` crate.
- Add the `rkyv-serialize` feature to enable `rkyv` serialization/deserialization of the `AutoSimd` types.
- Fix build with only the `libm` feature enabled.

## Release v0.7.1 (27 Jan. 2022)
- Add the optional types `WideF32x8` and `WideBoolF32x8` for 8-lanes SIMD float operations.

## Release v0.7.0 (02 Jan. 2022)
- Remove the `Bounded` requirement from `RealField`. Replace it by methods returning `Option<Self>` so that they can
  still be implemented by unbounded types (by returning `None`).
- The `ComplexField` trait derives  from `FromPrimitive` again. We can actually keep this because all its methods
  return `Option<Self>`, meaning that it could be implemented by any type.
- Add the `cuda` cargo feature that enables support for [Rust-Cuda](https://github.com/Rust-GPU/Rust-CUDA) by generating
  the relevant cuda intrinsics for float operations when running on a cuda kernel.


## Release v0.6.0