@@ -7,6 +7,7 @@
   traits named `ClosedAddAssign, ClosedMulAssign, etc.`
 - The `ComplexField` and `SimdComplexField` (and, by extension, `RealField` and `SimdRealField`) traits now depend on the
   `SupersetOf<f32>` trait in addition to `SupersetOf<f64>`.
+- Replace the `SimdValue::lanes()` function by an associated constant `SimdValue::LANES`.
 
 ## Release v0.8.1 (04 Apr. 2023)
 - Add implementation of `rkyv` serialization/deserialization to the `Wide*` wrapper types.
